--- a/atum-jvcp/pom.xml
+++ b/atum-jvcp/pom.xml
@@ -27,4 +27,23 @@
 			<version>1.2.16</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>org.atum.jvcp.atum_jvcp.CCcamServer</mainClass>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
