--- a/atum-jvcp/pom.xml
+++ b/atum-jvcp/pom.xml
@@ -26,6 +26,11 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
 		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.1.6.Final</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
