--- a/atum-jvcp/pom.xml
+++ b/atum-jvcp/pom.xml
@@ -51,7 +51,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>org.atum.jvcp.atum_jvcp.CCcamServer</mainClass>
+					<mainClass>org.atum.jvcp.CCcamServer</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
