--- a/atum-jvcp/pom.xml
+++ b/atum-jvcp/pom.xml
@@ -72,7 +72,7 @@
 						</manifest>
 					</archive>
 					<descriptorRefs>
-						<descriptorRef>runnable</descriptorRef>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
 				</configuration>
 			</plugin>
