--- a/atum-jvcp/pom.xml
+++ b/atum-jvcp/pom.xml
@@ -51,7 +51,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>org.atum.jvcp.CCcamServer</mainClass>
+					<mainClass>org.atum.jvcp.CardServer</mainClass>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -68,7 +68,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>org.atum.jvcp.CCcamServer</mainClass>
+							<mainClass>org.atum.jvcp.CardServer</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
