--- a/atum-jvcp/pom.xml
+++ b/atum-jvcp/pom.xml
@@ -36,6 +36,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.2</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
