--- a/atum-jvcp/pom.xml
+++ b/atum-jvcp/pom.xml
@@ -22,14 +22,14 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
+			<groupId>ch.qos.reload4j</groupId>
+			<artifactId>reload4j</artifactId>
+			<version>1.2.25</version>
 		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
-			<version>4.1.6.Final</version>
+			<version>4.1.42.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
